# PantryMVP

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routers/: food_definitions.py  households.py  inventory_items.py  ledger.py  members.py  receipt_imports.py  recipes.py  shopping_list.py  storage_locations.py  warnings.py
backend/app/core/: auth.py  config.py  jwks.py  responses.py  supabase.py
backend/app/schemas/: food_definition.py  household.py  inventory_item.py  ledger_entry.py  member.py  receipt_import.py  recipe.py  shopping_list.py  storage_location.py  warning.py
backend/app/services/: food_definitions.py  households.py  inventory_items.py  ledger.py  members.py  receipt_imports.py  receipt_parsing.py  recipes.py  shopping_list.py  storage_locations.py  warnings.py
backend/app/services/receipt_ocr/: __init__.py  _google_vision.py
backend/scripts/: food_definitions_seed.json  seed_food_definitions.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_inventory_authorization.py  test_inventory_integration.py  test_ledger_authorization.py  test_ledger_balances.py  test_ledger_integration.py  test_members_authorization.py  test_receipt_imports_authorization.py  test_receipt_imports_integration.py  test_receipt_storage_rls.py  test_recipes_authorization.py  test_recipes_integration.py  test_rls_isolation.py  test_shopping_list_authorization.py  test_shopping_list_integration.py  test_warnings_authorization.py  test_warnings_computation.py  test_warnings_integration.py
backend/tests/helpers/: jwt_keys.py  supabase_test_users.py
frontend/: .gitignore  package-lock.json  package.json  verify-e2e-ledger.mjs  verify-e2e-receipt-import.mjs  (+5 more)
(+59 files in other folders)
